Added forgot password logic and profile page

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,10 @@
 
 
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
         <!-- JWT API -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
