--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,4 +58,15 @@ spring.data.mongodb.uri=${MONGO_URI}
 #logging.level.root=INFO
 #logging.level.org.springframework.data.mongodb=DEBUG
 #logging.level.org.hibernate.SQL=DEBUG
-#logging.level.in.vishal.blooms.controller.BlogService =INFO
+
+
+# =========================
+# GMAIL CONFIGURATION (FINAL)
+# =========================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vishalsingh37040@gmail.com
+# Niche wo 16-digit code dalna bina space ke
+spring.mail.password=xlumerggsdfwmzxp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
