feat: add Gemini AI integration for blog content generation and summarization, fixed repository query bugs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,3 +70,12 @@ spring.mail.username=vishalsingh37040@gmail.com
 spring.mail.password=xlumerggsdfwmzxp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+
+
+# Ye OpenAI starter ko Gemini ki taraf mod dega
+spring.ai.openai.api-key=${GEMINI_API_KEY}
+spring.ai.openai.base-url=https://generativelanguage.googleapis.com/v1beta/openai/
+spring.ai.openai.chat.options.model=gemini-2.5-flash
