feat: add Redis caching, fix serialization, enhance user profile with creation tracking, and secure endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -79,3 +79,13 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.ai.openai.api-key=${GEMINI_API_KEY}
 spring.ai.openai.base-url=https://generativelanguage.googleapis.com/v1beta/openai/
 spring.ai.openai.chat.options.model=gemini-2.5-flash
+
+
+
+# =========================
+# REDIS CACHING CONFIGURATION
+# =========================
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+
