--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -82,10 +82,17 @@ spring.ai.openai.chat.options.model=gemini-2.5-flash
 
 
 
-# =========================
-# REDIS CACHING CONFIGURATION
-# =========================
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+# ===============================================
+# REDIS CONFIGURATION (Smart Switching)
+# ===============================================
+# Agar Render par variables mile toh Cloud use karega, nahi toh Localhost
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.username=${REDIS_USERNAME:default}
+spring.data.redis.password=${REDIS_PASSWORD:}
 
+# Cloud Redis ke liye SSL zaroori hai (Render par true hoga, Local par false)
+spring.data.redis.ssl.enabled=${REDIS_SSL:false}
 
+# Connection Timeout (Safety ke liye)
+spring.data.redis.timeout=60000
