final changes in my project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,9 +65,9 @@ spring.data.mongodb.uri=${MONGO_URI}
 # =========================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=vishalsingh37040@gmail.com
+spring.mail.username=${EMAIL_USERNAME}
 # Niche wo 16-digit code dalna bina space ke
-spring.mail.password=xlumerggsdfwmzxp
+spring.mail.password=${GMAIL_APP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
