changes in gmail port number to send otps

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,13 +63,18 @@ spring.data.mongodb.uri=${MONGO_URI}
 # =========================
 # GMAIL CONFIGURATION (FINAL)
 # =========================
+# =========================
+# GMAIL CONFIGURATION (Jugaad with Port 465)
+# =========================
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+# Port 587 hata kar 465 kar diya
+spring.mail.port=465
 spring.mail.username=${EMAIL_USERNAME}
-# Niche wo 16-digit code dalna bina space ke
 spring.mail.password=${GMAIL_APP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+# STARTTLS ko false karke, direct SSL enable kar diya
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.ssl.enable=true
 
 
 
