Updated email service to Brevo API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,18 +64,11 @@ spring.data.mongodb.uri=${MONGO_URI}
 # GMAIL CONFIGURATION (FINAL)
 # =========================
 # =========================
-# GMAIL CONFIGURATION (Jugaad with Port 465)
+# GMAIL HAT GAYA, AB BREVO API AAGAYA! (No Port blocking tension)
 # =========================
-spring.mail.host=smtp.gmail.com
-# Port 587 hata kar 465 kar diya
-spring.mail.port=465
 spring.mail.username=${EMAIL_USERNAME}
-spring.mail.password=${GMAIL_APP_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-# STARTTLS ko false karke, direct SSL enable kar diya
-spring.mail.properties.mail.smtp.starttls.enable=false
-spring.mail.properties.mail.smtp.ssl.enable=true
-
+# Yahan par apni wo lambi wali Brevo API Key paste kar dena
+brevo.api.key=${BREVO_API_KEY}
 
 
 
